# renovate_test

./: README.md  build.gradle.kts  gradle.properties  pyproject.toml  renovate.json  settings.gradle.kts
ecspresso/: images.libsonnet
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/: Main.kt
